--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
     <section class="quote-section">
       <div class="content quote-content">
         <p class="quote-text">
-          This is an inspiring quote, or a testimonial from a customer. Maybe
-          it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
+          Sometimes I think, But then I think again, and I realize that I forgot to think
         </p>
-        <p class="quote-author">-Thor, God of Thunder</p>
+        <p class="quote-author">-Vedant Wate</p>
       </div>
     </section>
     <section class="cta-section">
